# LRUcache

./: CMakeLists.txt  CachePolicy.h  LRU.h  LRUTTL.cpp  LRUTTL.h  LfuCache.h  Log.h  LruCache.h  README.md  min_test  min_test.cpp  test.cpp  testAllCache.cpp  testLfuCache.cpp
ArcCache/: ArcCache.h  ArcCacheNode.h  ArcLfuPart.h  ArcLruPart.h  basic_test.cpp  test_min
